--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -11,7 +11,7 @@ output:
 
 ## CONTEXT
 
-The 'Inside South Coast Chum - Non-Fraser' (ISC-NF Chum) SMU includes seven CUs of Chum Salmon <!-- omitted here and included at first instance in the WP: (*Oncorhynchus keta*)--> from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island (Figure \@ref(fig:chum-map); @holtbyConservationUnitsPacific2007). This area includes deep fjords, glaciers, large rivers, and small coastal streams. Chum salmon CUs spawning in the Fraser River watershed are not included in this SMU. They have been categorized as a separate 'Inside South Coast Chum - Fraser' SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats.
+The 'Inside South Coast Chum - Non-Fraser' SMU (hereafter ISC Chum) includes seven CUs of Chum Salmon <!-- omitted here and included at first instance in the WP: (*Oncorhynchus keta*)--> from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island (Figure \@ref(fig:chum-map); @holtbyConservationUnitsPacific2007). This area includes deep fjords, glaciers, large rivers, and small coastal streams. Chum salmon CUs spawning in the Fraser River watershed are not included in this SMU. They have been categorized as a separate 'Inside South Coast Chum - Fraser' SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats.
 
 ```{r CU-summary, echo=FALSE}
 d <- read.csv("data/CU_summary_table_report.csv", check.names = FALSE)
@@ -36,7 +36,7 @@ Chum from these CUs are  exposed to different threats to habitat, survival and p
 
 Benchmarks based on spawner-recruit relationships are unreliable if there is uncertainty in the spawner and recruit data. One alternative is benchmarks calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks). Previous work on developing WSP benchmarks for Inner South Coast Chum has shown that percentile benchmarks can be comparable to those based on stock-recruit relationships when productivity is relatively high and harvest is relatively low (@holtEvaluatingBenchmarksBiological2018). In other cases, percentile benchmarks may be inappropriate due to low productivity, high harvest, and because they do not account for non-stationarity in recruitment dynamics (@holtEvaluatingBenchmarksBiological2018).
 
-We chose the ISC-NF Chum SMU as a case study because we were interested in exploring LRP options for a data-limited SMU. We applied LRPs based on two methods: proportions of CUs above their lower benchmark, and logistic regression based on aggregate abundance. For proportions, we used percentile benchmarks and multi-dimensional status assessment to determine the status of component CUs. For the logistic regressions, we used percentile and $S_{gen}$ benchmarks. However, after attempting $S_{gen}$ benchmarks we decided not to use them because of unreliable stock-recruit data. Using recruitment data would not satisfy reliability principles in Holt et al. (in review). 
+We chose the ISC Chum SMU as a case study because we were interested in exploring LRP options for a data-limited SMU. We applied LRPs based on two methods: proportions of CUs above their lower benchmark, and logistic regression based on aggregate abundance. For proportions, we used percentile benchmarks and multi-dimensional status assessment to determine the status of component CUs. For the logistic regressions, we used percentile and $S_{gen}$ benchmarks. However, after attempting $S_{gen}$ benchmarks we decided not to use them because of unreliable stock-recruit data. Using recruitment data would not satisfy reliability principles in Holt et al. (in review). 
 
 ```{r chum-map, fig.cap="The seven Conservation Units that make up the Inside South Coast Chum Stock Management Unit (not including Lower Fraser and Fraser Canyon Conservation Units).", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/chum-map.png")
@@ -58,7 +58,7 @@ For this case study, we consider two approaches for characterizing CU status:
 
 The first approach, which uses the Salmon Scanner developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review)^[Holt, C. A., K. Holt, L. Warkentin, C. Wor, ... . Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Res Doc. In review] as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented or a point of comparison with the Salmon Scanner."
 
-When applying the Salmon Scanner to ISC-NF Chum, we use percentile benchmarks as both upper and lower benchmarks (\@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend on percentile-based benchmarks.
+When applying the Salmon Scanner to ISC Chum, we use percentile benchmarks as both upper and lower benchmarks (\@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend on percentile-based benchmarks.
 
 Percentile-based benchmarks can be applied to assess status of CUs when other data - like benchmarks based on productivity or habitat - are not available or reliable (@holtEvaluatingBenchmarksBiological2018, @clarkEvaluationPercentileApproach2014). The suitability of percentile benchmarks was evaluated for ISC Chum by @holtEvaluatingBenchmarksBiological2018, who tested how well percentile benchmarks matched benchmarks from stock-recruit parameters, using retrospective and simulation analyses. @holtEvaluatingBenchmarksBiological2018 also calculated benchmarks based on stock-recruit model parameters for ISC Chum stocks, but did not recommend them due to uncertainty in spawner and recruit data. They tested how well a 25% percentile benchmark (and higher values up to 50%) compared to estimates of $S_{gen}$ for these CUs. They found that percentile benchmarks (from 25-50%) under moderate to high harvest rates and low to moderate productivity tended to underestimate 'true' $S_{gen}$ values (estimated from the same data), which would lead to optimistic and incorrect status assessments. More work on alternatives to percentile benchmarks were needed in this case.
 
@@ -99,7 +99,7 @@ The methods for applying the Salmon Scanner to get CU status is described in Cha
 
 ### Methods
 
-We looked at the proportion of CUs that had status estimates above the red zone (or, above the lower percentile benchmark) to determine in which years between 1960 and 2018 the LRP would have been breached. As with the Interior Fraser Coho and WCVI Chinook case studies, we required all CUs to be above the red zone for the ISC-NF Chum SMU to be classified as being above the LRP. 
+We looked at the proportion of CUs that had status estimates above the red zone (or, above the lower percentile benchmark) to determine in which years between 1960 and 2018 the LRP would have been breached. As with the Interior Fraser Coho and WCVI Chinook case studies, we required all CUs to be above the red zone for the ISC Chum SMU to be classified as being above the LRP. 
 
 
 The single-metric approach to assessing CU status based on percentiles has specific data requirements (@holtEvaluatingBenchmarksBiological2018) while the Salmon Scanner approach can be applied to any CU with at least a consistent time-series of spawner abundances. To compare LRPs based on CU assessment from these two approaches we compared data subsets including those that used the same data for each method, and all appropriate data for each method. We evaluated six different combinations of data and LRP methods (Table \@ref(tab:LRP-scenarios)). For this comparison, we used percentile benchmarks based on @holtEvaluatingBenchmarksBiological2018. The benchmarks were estimated using the entire time series. 'Full' scenarios only included CUs with complete time series (no CUs with years with CU-level infilling). 'Partial' scenarios included CUs with incomplete time series, where the years that did not have observations in those CUs were omitted. 
@@ -116,12 +116,12 @@ For scenarios 1 and 2, we used CU status based on percentile benchmarks that are
 \hline    
 Scenario Name &   \rotatebox{90}{Southern Coastal Streams} &   \rotatebox{90}{ North East Vancouver Island} &  \rotatebox{90}{ Upper Knight} &  \rotatebox{90}{ Loughborough} &  \rotatebox{90}{ Bute Inlet} & \rotatebox{90}{ Georgia Strait} & \rotatebox{90}{ Howe Sound-Burrard Inlet}\\ 
 \hline
-1. Percentile- 4 CUs full       & - & Y & -  & Y & -  & Y & Y \\
-2. Percentile- 5 CUs partial    & - & Y & YP & Y & -  & Y & Y \\
-3. Decision Tree- 4 CUs full    & - & Y & -  & Y & -  & Y & Y \\
-4. Decision Tree- 5 CUs full    & Y & Y & -  & Y & -  & Y & Y \\
-5. Decision Tree- 7 CUs partial & Y & Y & YP & Y & YP & Y & Y \\
-6. Decision Tree- 5 CUs partial & - & Y & YP & Y & -  & Y & Y \\
+1. Prop: Scanner: 4CUs full       & - & Y & -  & Y & -  & Y & Y \\
+2. Prop: Percentile: 4CUs full    & - & Y & -  & Y & -  & Y & Y \\
+3. Prop: Scanner: 5CUs partial    & - & Y & YP & Y & -  & Y & Y \\
+4. Prop: Percentile: 5CUs partial & - & Y & YP & Y & -  & Y & Y \\
+5. Prop: Scanner: 5CUs full       & Y & Y & -  & Y & -  & Y & Y \\
+6. Prop: Scanner: 7CUs partial    & Y & Y & YP & Y & YP & Y & Y \\
 \hline
 \end{tabular}
 (\#tab:LRP-scenarios)
@@ -226,7 +226,7 @@ knitr::include_graphics('figure/chum-spawners-corr.png')
 
 ## HISTORICAL EVALUATION OF STATUS ACROSS LRP METHODS
 
-The ISC-NF Chum SMU was consistently below the LRP for large portions of the historical time series, regardless of which LRP estimation method  (Figure \@ref(fig:chum-LRP-compare). While the aggregate abundance of the SMU increased over time, SMU status remained below the LRP in every year of the past two decades except 2004 for all estimation methods. These results were mainly due to the tendency of Georgia Strait and Burrard Inlet-Howe Sound CUs to have high and increasing abundances while smaller CUs, such as Southern Coastal Streams, remained low.
+The ISC Chum SMU was consistently below the LRP for large portions of the historical time series, regardless of which LRP estimation method  (Figure \@ref(fig:chum-LRP-compare). While the aggregate abundance of the SMU increased over time, SMU status remained below the LRP in every year of the past two decades except 2004 for all estimation methods. These results were mainly due to the tendency of Georgia Strait and Burrard Inlet-Howe Sound CUs to have high and increasing abundances while smaller CUs, such as Southern Coastal Streams, remained low.
 
 When using the same data, LRP status based on percentile benchmarks and the Salmon Scanner were identical (Figure \@ref(fig:chum-LRP-compare)). This can be seeen by comparing Scenarios 1 and 3, and comparing Scenarios 2 and 6 (same data, more data than 1 and 3). This is because, when no abundance benchmark is used, the Salmon Scanner tool relies on trends and absolute abundance threshold of 1500 fish (Fig. \@ref(fig:decision-tree). 
 
@@ -284,7 +284,7 @@ KH: We can add some discussion around this point about trade-offs to the guideli
 There are some assumptions and limitations when using benchmarks based on percentiles of abundance. One of the largest <!--limitations--> is the influence of shifting baselines on percentile benchmarks. If abundance has decreased over time, the resulting percentile benchmark will also decrease over time as more data is included (Figure \@ref(fig:chum-perc-retro)). This means that the benchmark shifts downward, reinforcing a shifting baseline. A population size that used to be below the benchmark can become above the benchmark, as the benchmark decreases. This can arise from a decrease in abundance in the period of data, and by an unrecorded high level of abundance before the period of data followed by a decrease before data are available. 
 
 
-<!--KH: can we say something about how the above concerns link to our case study?  For example, using ISC-NF Chum data updated to 2018, we found trends in percentile benchmarks for some CUs (Georgia Staight, Howe-Sound Burrard, Upper Knight), but not for others (Loughborough, North East VI). Was there any recommendation from Holt et al. on what to do in this situation that applies to LRPs?? Or, are we ok so long as we remain within the productivity and exploitation rate limits recommended in the Holt et al. table? It looks like Upper Knight is the only CU where benchmarks trends down, however this was in the early part of the time series and this CU already uses a 50% lower benchmark to be precautionary. Recent abundances and benchmarks seem stable. -->
+<!--KH: can we say something about how the above concerns link to our case study?  For example, using ISC Chum data updated to 2018, we found trends in percentile benchmarks for some CUs (Georgia Staight, Howe-Sound Burrard, Upper Knight), but not for others (Loughborough, North East VI). Was there any recommendation from Holt et al. on what to do in this situation that applies to LRPs?? Or, are we ok so long as we remain within the productivity and exploitation rate limits recommended in the Holt et al. table? It looks like Upper Knight is the only CU where benchmarks trends down, however this was in the early part of the time series and this CU already uses a 50% lower benchmark to be precautionary. Recent abundances and benchmarks seem stable. -->
 
 The concept of percentile benchmarks also assumes productivity is stationary. Otherwise, if productivity was decreasing, a larger abundance of spawners would be required to produce the same number of recruits. Contrary to this assumption, there is evidence that the productivity of chum salmon is not stationary. <!-- SG: Productivity is really never stationary, but pariculartly right now many salmon are declining, so not unique to this case --> 
 The productivity of BC chum salmon is lower when the abundance of North American salmon like pink, sockeye, and chum is greater (@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021). <!--Suggestion by Sue Grant to remove following sentences because all salmon are affected by marine and FW conditions, and this level of detail is not relevant to this paper:  "Ocean conditions may also have an affect on ISC chum. The Pacific Decadal Oscillation (PDO) can have a positive or negative relationship with the productivity of wild Washington chum depending on the time period examined (@litzCompetitionOddyearPink2021). The North Pacific Gyre Oscillation (NPGO) had a positive relationship with chum growth, mediated my PDO (@debertinMarineGrowthPatterns2017)." --> The percentile benchmark is also only informed by the data available, which may be for a short time period. Those using percentile benchmarks should also consider whether they are calculated using a percentile of recruits or escapement.
