added refs to Guidelines bib file

--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -3,6 +3,9 @@
 ## Background
 
 <!--CH comment: change all reference of multidimensional tool to the Pacific Salmon Status Scanner and for short the Salmon Scanner-->
+Test:: S\textsubscript{gen} and S\textsubscript{MSY} compared with Sgen-PriorCap) and Sgen_Ricker vs Sgen_priorCap compared with S_{gen} and Sgen
+
+
 Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisions that introduce legal obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005a].
 
 Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002]. Because allee effects are only infrequently observed among marine fish species [@keithPopulationDynamicsMarine2012], and rarely detected for Pacific salmon (but see @cunninghamSizeSelectivityPredation2013), a biological basis for serious harm is often difficult to identify. 
@@ -12,7 +15,7 @@ Furthermore, the definition of serious harm from @dfoFisheryDecisionMakingFramew
 
 Canada's Wild Salmon Policy, WSP, represents DFO's implementation of the Precautionary Approach Framework for Pacific salmon. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005a]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting, Conservation Units, defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). 
 
-Differences in adaptive traits among CUs results in diversity in CU-level responses to threats and environmental drivers. Portfolio effects have been established for numerous salmon stocks, defined as population aggregates containing population and life-history diversity which produce temporally stable recruitment because of the complementary or independent dynamics among sub-populations [@schindlerPopulationDiversityPortfolio2010]. Population and life-history diversity can buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes, e.g., those anticipated under climate warming. Deterioration of portfolio effects have been observed for Pacific salmon in Canada, in part due to fishing practices that ignored underlying population structure (e.g., structure at the CU level) and associated biodiversity [@pricePortfolioSimplificationArising2021].
+Differences in adaptive traits among CUs results in diversity in CU-level responses to threats and environmental drivers. Portfolio effects have been established for numerous salmon stocks, defined as population aggregates containing population and life-history diversity which produce temporally stable recruitment because of the complementary or independent dynamics among sub-populations [@schindlerPopulationDiversityPortfolio2010a]. Population and life-history diversity can buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes, e.g., those anticipated under climate warming. Deterioration of portfolio effects have been observed for Pacific salmon in Canada, in part due to fishing practices that ignored underlying population structure (e.g., structure at the CU level) and associated biodiversity [@pricePortfolioSimplificationArising2021a].
 
 Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status, green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to $S_{MSY}$ in one salmon generation under equilibrium conditions, $S_{gen}$ [@holtEvaluationBenchmarksConservation2009]. Benchmarks for data-limited contexts have also been identified in recognition that the data required to estimate spawner-recruitment based benchmarks are not always available. See Section \@ref(cu-est-methods).
 
@@ -131,9 +134,9 @@ In addition, some populations without hatcheries may be influenced by straying f
 LRPs have several roles, including triggering rebuilding plans under the Fisheries Act, communicating conservation risks to decision makers and the public, and informing management decisions about fisheries. LRPs are biologically based values that are separate from management measures, but can be used to inform management decisions. For example, LRPs can be used to identify operational control points which are points where management actions are triggered within harvest control rules, but are not necessarily operational control points themselves. <!--CW: Although I understand this, I still find it confusing. To me, a rebuilding plan is  (has to be) a management action, so what is the difference between the LRP triggering a rebuilding plan and an OCP trigerring other managent action? --> Within a harvest control rule, a conservation goal might be to avoid low biomass levels where serious harm is occurring which can be translated to a measurable objective to avoid spawner abundances lower than an LRP with a high probability (e.g., 95%) over a specified time period.  However, operational control points can be identified to achieve a suite of biological and socioeconomic objectives, beyond those associated with serious harm, usually by a diverse range of managers and stakeholders. In contrast, DFO's Science Sector is responsible for identifying LRPs using <!--based only --> biological considerations [@dfoScienceAdvicePrecautionary2021]. 
 
 
-More generally, LRPs can be used within a Management Procedure Framework (or Management Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g. 95% probability of staying above LRP over a specified period) among other objectives, without being explicitly specified [@dfoManagementProcedureFramework2021]. This approach includes uncertainties in the biology of the stock, dynamics of the fleet, observation of abundances and associated biological characteristics, and the implementation of management decisions. <!--CW: Include sentence from below here: Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020]. -->
+More generally, LRPs can be used within a Management Procedure Framework (or Management Strategy Evaluation) to identify those procedures that achieve conservation objectives (e.g. 95% probability of staying above LRP over a specified period) among other objectives, without being explicitly specified [@dfoManagementProcedureFramework2021]. This approach includes uncertainties in the biology of the stock, dynamics of the fleet, observation of abundances and associated biological characteristics, and the implementation of management decisions. <!--CW: Include sentence from below here: Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020a]. -->
 
-<!-- CW : I think thie sentence can be removed: LRPs are identified within the model to evaluate performance of various management procedures, where LRPs and associated spawning stock values are specific to a set of assumptions (random draws) and are integrated over those uncertainties to derived overall performance.--><!--CH: is this too much jargon?--> One advantage of this approach is that a single best underlying model (or LRP) describing the population and fleet dynamics need not be identified; instead management procedures can be evaluated against a suite of plausible underlying models or assumptions. Although increasingly common in marine fisheries, the application of a Management Procedure Frameworks is less common for Pacific salmon where the impact of diverse management levers <!-- and their interactions --> are often difficult to quantify (e.g., hatcheries and harvest, though see the AHA model documented by @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009). <!--CW: In addition, salmon --><!--CW remove: and--> stock assessmentment have typically not integrated uncertainties in estimates of spawner abundances with <!--for?--> reference point derivation (but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021). <!--remove: -->Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020]. The roles of LRPs will likely evolve for Pacific salmon over time, and an exhaustive review is beyond the scope of this paper.
+<!-- CW : I think thie sentence can be removed: LRPs are identified within the model to evaluate performance of various management procedures, where LRPs and associated spawning stock values are specific to a set of assumptions (random draws) and are integrated over those uncertainties to derived overall performance.--><!--CH: is this too much jargon?--> One advantage of this approach is that a single best underlying model (or LRP) describing the population and fleet dynamics need not be identified; instead management procedures can be evaluated against a suite of plausible underlying models or assumptions. Although increasingly common in marine fisheries, the application of a Management Procedure Frameworks is less common for Pacific salmon where the impact of diverse management levers <!-- and their interactions --> are often difficult to quantify (e.g., hatcheries and harvest, though see the AHA model documented by @hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009). <!--CW: In addition, salmon --><!--CW remove: and--> stock assessmentment have typically not integrated uncertainties in estimates of spawner abundances with <!--for?--> reference point derivation (but see @scheuerellIntegratedPopulationModel2021 and @statonIncorporatingDemographicInformation2021). <!--remove: -->Simulation evaluation of management procedures is widely viewed as a best practice for informing management decisions under uncertainty [@puntEssentialFeaturesNextgeneration2020a]. The roles of LRPs will likely evolve for Pacific salmon over time, and an exhaustive review is beyond the scope of this paper.
 
 
 <!--CH side note:  DFO's Fisheries Sustainability checklist shows LRPs that usually management operational control points, and not biological LRPs per se-->
