--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -30,6 +30,16 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\SHC85TCE\\A’mar et al. - 2009 - The evaluation of two management strategies for th.pdf}
 }
 
+@article{arakiCarryoverEffectCaptive2009,
+  title = {Carry-over Effect of Captive Breeding Reduces Reproductive Fitness of Wild-Born Descendants in the Wild},
+  author = {Araki, Hitoshi and Cooper, Becky and Blouin, Michael S},
+  year = {2009},
+  journal = {Biol. Lett.},
+  pages = {4},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\NKXLKWIE\\Araki et al. - 2009 - Carry-over effect of captive breeding reduces repr.pdf}
+}
+
 @article{arbeiderInteriorFraserCoho2020,
   title = {Interior {{Fraser Coho Salmon Recovery Potential Assessment}}},
   author = {Arbeider, Michael and Ritchie, Lynda and Braun, Doug and Jenewein, Brittany and Rickards, Karen and Dionne, Kaitlyn and Holt, Carrie and Labelle, Marc and Nicklin, Pete and Mozin, Paul and Grant, Paul and Parken, Chuck and Bailey, Richard},
@@ -189,15 +199,26 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\3AVX36CQ\\Chaput et al. - Considerations for defining reference points for s.pdf}
 }
 
-@article{chenIncorporatingAlleeEffects2002a,
+@article{chenIncorporatingAlleeEffects2002,
   title = {Incorporating {{Allee}} Effects in Fish Stock\textendash{} Recruitment Models and Applications for Determining Reference Points},
   author = {Chen, D G and Irvine, J R and Cass, A J},
   year = {2002},
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
   volume = {59},
-  pages = {8},
+  pages = {242--249},
+  doi = {10.1139/F02-005},
   abstract = {A new type of stock\textendash recruitment model is examined that incorporates Allee effects, which may occur when fish populations are small. The model is a natural extension of traditional models, which only incorporate the negative effects of increasing density on fecundity and (or) survival. Because the new model is intrinsically nonlinear and because of convergence problems at local optima, we use a maximum likelihood approach with a global genetic search algorithm to estimate model parameters. Parameter uncertainty is obtained from the inverse of the Fisher information matrix. Based on this new model, an extinction probability curve is developed using the parameter defining the Allee effects. This curve can readily be used to calculate the theoretical probability of extinction for a single brood line in one generation for any particular spawner number or biomass. Alternatively, because managers may wish to assign reference points corresponding to particular extinction probabilities, spawner numbers can be determined for these reference points. Two Pacific salmon populations, North Thompson coho (Oncorhynchus kisutch) and Chilko sockeye (O. nerka), are used to demonstrate the approach. It is found that the Allee effect parameter is statistically significant for the Thompson coho, but not for Chilko sockeye.},
+  langid = {english}
+}
+
+@article{christieReproductiveSuccessEarlygeneration2014,
+  title = {On the Reproductive Success of Earlygeneration Hatchery Fish in the Wild},
+  author = {Christie, Mark R and Ford, Michael J and Blouin, Michael S},
+  year = {2014},
+  pages = {14},
+  abstract = {Large numbers of hatchery salmon spawn in wild populations each year. Hatchery fish with multiple generations of hatchery ancestry often have heritably lower reproductive success than wild fish and may reduce the fitness of an entire population. Whether this reduced fitness also occurs for hatchery fish created with local- and predominantly wild-origin parents remains controversial. Here, we review recent studies on the reproductive success of such `early-generation' hatchery fish that spawn in the wild. Combining 51 estimates from six studies on four salmon species, we found that (i) early-generation hatchery fish averaged only half the reproductive success of their wild-origin counterparts when spawning in the wild, (ii) the reduction in reproductive success was more severe for males than for females, and (iii) all species showed reduced fitness due to hatchery rearing. We review commonalities among studies that point to possible mechanisms (e.g., environmental versus genetic effects). Furthermore, we illustrate that sample sizes typical of these studies result in low statistical power to detect fitness differences unless the differences are substantial. This review demonstrates that reduced fitness of early-generation hatchery fish may be a general phenomenon. Future research should focus on determining the causes of those fitness reductions and whether they lead to long-term reductions in the fitness of wild populations.},
   langid = {english},
-  file = {C\:\\Users\\HoltC\\Zotero\\storage\\R6ACK3AK\\Chen et al. - 2002 - Incorporating Allee effects in fish stock– recruit.pdf}
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\GEFERT5V\\Christie et al. - 2014 - On the reproductive success of earlygeneration hat.pdf}
 }
 
 @article{collieHarvestStrategiesClimateresilient2021,
@@ -966,6 +987,17 @@
   abstract = {Fisheries and Oceans Canada requires escapement goals for Chinook salmon (Oncorhynchus tshawytscha) stocks to evaluate their status and achieve objectives established by international agreements and domestic policy. Unfortunately the data typically needed to establish these `goals', using stock-recruitment techniques, are expensive to gather and are, for most stocks, lacking. This prompted us to develop the habitat-based approach to generate escapement goals described in this report. We related productive capacity to freshwater habitat area based on results from a meta-analysis of 25 Chinook stocks. Stocks were distributed between central Alaska and northern Oregon and represented a broad range of environments and life history. We developed an allometric model that predicted Smsy and Srep (spawners required to produced maximum sustained yield and replacement, respectively) from the watershed area and assessed the model's performance. The model adequately predicted the Smsy and Srep for an independent data source and out-performed a current interim method applied to British Columbia (BC) Key Streams. The habitat-based approach adequately predicted Smsy and Srep for seven case study examples, although it overestimated the productive capacity of stocks with relatively small spawning areas. Our habitat-based model can generate biologically-based escapement goals, rooted in fish-production relationships, for data limited stocks over a broad range of environments. This simple approach requires easily acquirable data and makes few assumptions. However, spawner escapements of known accuracy and reliability are required, which may impede implementation for some systems. The approach is well-suited for most data limited stocks in BC and can be tested and refined as new stock-recruitment data become available. Since the habitat-based method was more accurate than the interim method for BC Key Streams, we recommend applying it for data limited stocks in BC to establish escapement goals until more stock-specific data are available.}
 }
 
+@article{peacockEvaluatingConsequencesCommon2020,
+  title = {Evaluating the Consequences of Common Assumptions in Run Reconstructions on {{Pacific}} Salmon Biological Status Assessments},
+  author = {Peacock, Stephanie J and Hertz, Eric and Holt, Carrie A and Connors, Brendan and Freshwater, Cameron and Connors, Katrina},
+  year = {2020},
+  volume = {77},
+  pages = {17},
+  abstract = {Information on biological status is essential for designing, implementing, and evaluating management strategies and recovery plans for threatened or exploited species. However, the data required to quantify status are often limited, and it is important to understand how assessments of status may be biased by assumptions in data analysis. For Pacific salmon, biological status assessments based on spawner abundances and spawner\textendash recruitment (SR) analyses often involve ``run reconstructions'' that impute missing spawner data, expand observed spawner abundance to account for unmonitored streams, assign catch to individual stocks, and quantify age-at-return. Using a stochastic simulation approach, we quantified how common assumptions in run reconstructions biased assessments of biological status based on spawner abundance. We found that status assessments were robust to most common assumptions in run reconstructions, even in the face of declining monitoring coverage, but that overestimating catch tended to increase rates of status misclassification. Our results lend confidence to biological status assessments based on spawner abundances and SR analyses, even in the face of incomplete data.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\E5HWYSQ8\\Peacock et al. - 2020 - Evaluating the consequences of common assumptions .pdf}
+}
+
 @article{peacockMetricsSamplingDesigns2012,
   title = {Metrics and Sampling Designs for Detecting Trends in the Distribution of Spawning {{Pacific}} Salmon ( {{{\emph{Oncorhynchus}}}} Spp.)},
   author = {Peacock, Stephanie J. and Holt, Carrie A.},
@@ -1268,6 +1300,14 @@
 @misc{USCodeFederal2021,
   title = {{{US Code}} of {{Federal Regulations}}},
   year = {2021}
+}
+
+@book{waltersFisheriesEcologyManagement2004,
+  title = {Fisheries {{Ecology}} and {{Management}}},
+  author = {Walters, C and Martell, S J D},
+  year = {2004},
+  publisher = {{Princeton University Press}},
+  address = {{Princeton}}
 }
 
 @techreport{withlerGeneticallyBasedTargets2018,
