--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -4,9 +4,9 @@
 
 ### CU assessments
 
-Uncertainties in CU assessments affect both proportion-based and aggregate abundance-based LRPs, and they arise because of uncertainties in underlying data, estimation uncertainty in the statistical models underlying benchmarks, and structural uncertainties in model forms, including which biological metrics and spatial scales to consider in assessments.   
+Uncertainties in CU assessments affect both proportion-based and aggregate abundance-based LRPs, and arise because of uncertainties in underlying data, estimation uncertainty in the statistical models underlying benchmarks, and structural uncertainties in model forms, including which biological metrics and spatial scales to consider.   
 
-Observations errors in spawner abundances, catches, stock assignment of catches, and ages-at-maturity can result in data uncertainties, which may impact estimates recruitment in 'run reconstructions' and assessment of status. In addition, short time-series or those with missing values can increase uncertainties in assessments. However, @peacockEvaluatingConsequencesCommon2020 found that status assessments were robust to most common assumptions in run reconstructions, even in the face of declining monitoring coverage, but that overestimating catch tended to increase rates of status misclassification. THe magnitude and distribution of these uncertainties will be CU and species dependent.
+Observations errors in spawner abundances, catches, stock assignment of catches, and ages-at-maturity can result in data uncertainties, which may impact estimates recruitment in 'run reconstructions' and assessment of status. In addition, short time-series or those with missing values can increase uncertainties in assessments. However, @peacockEvaluatingConsequencesCommon2020 found that CU status assessments were generally robust to most common assumptions in run reconstructions, even in the face of declining monitoring coverage, but that overestimating catch tended to increase rates of status misclassification. The magnitude and distribution of these uncertainties will be CU- and species- dependent.
 
 The impact of hatchery enhancement on spawner and recruitment time-series is a key uncertainty due to the low rates of marking among hatcheries. Even when data on the proportion of hatchery-origin fish are available and abundance time-series are adjusted to account for these (as in the Interior Fraser River Coho case study), the genetic impacts of hatchery enhancement can perpetuate over multiple generations [@arakiCarryoverEffectCaptive2009; @christieReproductiveSuccessEarlygeneration2014], but are difficult to quantify because second generation hatchery-origin fish are not marked or monitored. This is a source of uncertainty for populations impacted by within-basin hatchery facilities and those impacted by straying out-of-basin. Targeted marking and monitoring of spawning grounds for mark proportions and genetic analyses to identify genetic retrogression from strays would help address these uncertainties.  
 
