--- a/guidelinesWP/02-chap2.Rmd
+++ b/guidelinesWP/02-chap2.Rmd
@@ -28,7 +28,7 @@ Where possible, a statistically integrated approach for estimating LRPs should b
 
 <!--CH suggestion: I've added another 2 principles from NHQ's list. Let me know what you think.-->
 
-**Principle 5**. When selecting among multiple methods for determining LRPs, the choice should take into account risk <!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, population dynamics (parameters and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that do not rely on highly uncertain data or assumptions or that explicitly account for those uncertainties should be preferred. <!--CH: This principle supports use of ppn-based LRPs over aggregate-abundance based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate-abundance based LRPs that are statistically integrated so account of uncertainty in CU benchmarks. I have added to chapter on guidelines  -->
+**Principle 5**. When selecting among multiple methods for determining LRPs, the choice should take into account risk <!-- CW: Risk or uncertainty? I think of risk as associated with FM and objectives. i.e. prob of achieving something. -->. Candidate methods for LRPs vary in how and the extent to which they account for uncertainty in underlying data, population dynamics (parameters and model structure), and derivation of CU-level statuses. These uncertainties create risks of LRPs providing a misleading threshold of serious harm. All else being equal, methods that do not rely on highly uncertain data or assumptions or that explicitly account for those uncertainties should be preferred. <!--CH: This principle supports use of ppn-based LRPs over aggregate abundance-based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate abundance-based LRPs that are statistically integrated so account of uncertainty in CU benchmarks. I have added to chapter on guidelines  -->
 
 
 **Principle 6**. Consider the use of alternative paradigms for developing LRPs. LRP estimates that converge when derived using different approaches, increases support that the methods capture underlying population dynamics despite differing assumptions and use of available data.
