--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -4,7 +4,7 @@
 
 ## Stepwise approach for selecting LRPs
 
-We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above red as the default method. Aggregate-abundance based LRPs are considered when required for fisheries management (e.g., local or international), and are considered supplemental to the proportion of CUs with status above red. The step-wise approach considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further evaluated.
+We recommend a step-wise approach for identifying LRPs, with the proportion of component CUs with status above red as the default method. Aggregate abundance-based LRPs are considered when required for fisheries management (e.g., local or international), and are considered supplemental to the proportion of CUs with status above red. The step-wise approach considers data availability for candidate LRP methods and provides guidance when inconsistencies in status occur from applying multiple LRP methods. These steps can be adapted in the future as more methods are developed and/or these methods are further evaluated.
 
 ### Data Availability and Spatial Scale(Step 1)
 
@@ -121,19 +121,19 @@ The frequency of SMU-scale peer reviews outside of the annual implementation of 
 
 ### Are Aggregate Abundance-Based LRPs Required For Fisheries Management? (Step 7)
 
-<!--CH: Mention how principle 5 supports use of ppn-based LRPs over aggregate-abundance based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate-abundance based LRPs that are statistically integrated so account of uncertainty in CU benchmarks.  -->
+<!--CH: Mention how principle 5 supports use of ppn-based LRPs over aggregate abundance-based LRPs (b/c of uncertain assumptions in LR), with some justification for considering aggregate abundance-based LRPs that are statistically integrated so account of uncertainty in CU benchmarks.  -->
 
 Although proportion-based LRPs are sufficient under the Fish Stock provisions for Pacific salmon, alternative, abundance-based LRPs may be required for fisheries management decision making (see Section \@ref(roleLRPs).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate-based benchmarks may in some cases be required for local or international management. For example, for Nass and Skeena Sockeye aggregate escapement goals are required under the Pacific Salmon Treaty [@TreatyGovernmentCanada2019], though to comply with the WSP, the status of component CUs should also be considered. 
 
-However, if an LRP is defined within the context of a Management Procedure framework (see Section \@ref(intro)), then an aggregate abundance-based LRP may not be required if the framework can demonstrate the probability of individual CUs falling below lower benchmarks for various management options. For Pacific salmon, management procedures extend beyond harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate-abundance based LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. If aggregate-abundance based LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-12) are relevant if aggregate-abundance based LRPs are required, and build on proportion-based LRPs derived in the previous steps. <!--CH added next 2 sentences-->Risk associated with uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). In addition, the ability of aggregate-abundance based LRPs to integrate uncertainties from CU-level benchmarks to the SMU level, unlike proportion-based LRPs, should also be considered.
+However, if an LRP is defined within the context of a Management Procedure framework (see Section \@ref(intro)), then an aggregate abundance-based LRP may not be required if the framework can demonstrate the probability of individual CUs falling below lower benchmarks for various management options. For Pacific salmon, management procedures extend beyond harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance-based LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. If aggregate abundance-based LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-12) are relevant if aggregate abundance-based LRPs are required, and build on proportion-based LRPs derived in the previous steps. <!--CH added next 2 sentences-->Risk associated with uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). In addition, the ability of aggregate abundance-based LRPs to integrate uncertainties from CU-level benchmarks to the SMU level, unlike proportion-based LRPs, should also be considered.
 
-Like proportion-based LRPs, aggregate-abundance based LRPs are scientifically derived quantities that delineate serious harm to an SMU following the principles outlined in Section \@ref(principles). Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). 
+Like proportion-based LRPs, aggregate abundance-based LRPs are scientifically derived quantities that delineate serious harm to an SMU following the principles outlined in Section \@ref(principles). Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). 
 
 
 <!-- CW May be appropriate to Subdivide these steps within two sub sections: proportional based LRPS and aggregate abundance based LRPs -->
 ### What is Acceptable Probability of Achieving Proportion-Based LRP? (Step 8)
 
-Aggregate-abundance based LRPs are defined to be consistent with the WSP objective of maintaining biodiversity at the scale of CUs. First, an acceptable probability of achieving the proportion-based LRP (i.e., all CUs above red status) is identified. We provide a range of probabilities and their definitions adapted from likelihood scale used by the International Panel on Climate Change [@mastrandreaGuidanceNoteLead2010], instead of specifying a single probability. <!--CH consider removing the next 2 sentences, and instead borrow text from methods chapter in this WP about LRP being science-derived but with no way to scientific justify a specific p value-->DFO's Guidelines for the Implementation of Fish Stock Provisions states “Unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50$\%$ probability or if the projected stock status indicator falls below the LRP with a greater than 50$\%$ probability under a zero catch scenario in a 1 year projection” [@dfoScienceGuidelinesSupport2021]. This definition of breaching an LRP suggests a risk neutral approach to identifying serious harm, whereby risks may be accounted for directly and explicitly in harvest control rules that trade-off multiple objectives. In our case studies, we have focused on aggregate-abundances with 50$\%$ probability of achieving proportion-based LRPs as a lower bound on LRP estimates, though other probabilities could be considered on a case-by-case basis.
+Aggregate abundance-based LRPs are defined to be consistent with the WSP objective of maintaining biodiversity at the scale of CUs. First, an acceptable probability of achieving the proportion-based LRP (i.e., all CUs above red status) is identified. We provide a range of probabilities and their definitions adapted from likelihood scale used by the International Panel on Climate Change [@mastrandreaGuidanceNoteLead2010], instead of specifying a single probability. <!--CH consider removing the next 2 sentences, and instead borrow text from methods chapter in this WP about LRP being science-derived but with no way to scientific justify a specific p value-->DFO's Guidelines for the Implementation of Fish Stock Provisions states “Unless otherwise defined in stock-specific precautionary approach frameworks, the LRP should be considered breached if the terminal year stock status indicator is estimated to be at or below the LRP with a greater than 50$\%$ probability or if the projected stock status indicator falls below the LRP with a greater than 50$\%$ probability under a zero catch scenario in a 1 year projection” [@dfoScienceGuidelinesSupport2021]. This definition of breaching an LRP suggests a risk neutral approach to identifying serious harm, whereby risks may be accounted for directly and explicitly in harvest control rules that trade-off multiple objectives. In our case studies, we have focused on aggregate-abundances with 50$\%$ probability of achieving proportion-based LRPs as a lower bound on LRP estimates, though other probabilities could be considered on a case-by-case basis.
 
 
 \renewcommand*{\arraystretch}{1.6}
@@ -153,9 +153,9 @@ $>$ 99\%  &  virtually certain that all CUs are above their lower benchmark\\
 
 
 
-### Choose among aggregate-abundance based LRPs (Step 9)
+### Choose among aggregate abundance-based LRPs (Step 9)
 
-Guidelines for choosing among two types of aggregate-abundance based LRPs are described here: empirical logistic regression-based LRPs and projection-based LRPs that use historical data or projected data, respectively to identify the relationship between aggregate abundances and the probability that all CUs are above red status. These guidelines are based on assumptions required for each method. If assumptions are not met for either method presented below, then developing aggregate abundance-based LRPs that are aligned with the WSP may not be possible for this SMU. However, developing and evaluating management procedures that account for CU-level status is still prudent even in the absence of aggregate abundance-based LRPs (Section \@ref(recommendations)).
+Guidelines for choosing among two types of aggregate abundance-based LRPs are described here: empirical logistic regression-based LRPs and projection-based LRPs that use historical data or projected data, respectively to identify the relationship between aggregate abundances and the probability that all CUs are above red status. These guidelines are based on assumptions required for each method. If assumptions are not met for either method presented below, then developing aggregate abundance-based LRPs that are aligned with the WSP may not be possible for this SMU. However, developing and evaluating management procedures that account for CU-level status is still prudent even in the absence of aggregate abundance-based LRPs (Section \@ref(recommendations)).
 
 Both methods exploit covariation in population dynamics among component CUs, such that when one CU has depleted status and contributes relatively few spawners, it is likely that others CUs also have depleted status contributing few spawners to the aggregate abundance. In contrast, when one CU is considered healthy and contributes many spawners, it is more likely that other CUs are the same when they covary. 
 
@@ -165,7 +165,7 @@ Given, uncertainties and limitations associated with each method, application an
 
 
 
-Empirical logistic regression-based LRPs are derived from historical time-series of proportion of CUs above red status, indicated by a single metric metric on spawner abundances or distribution.  <!--CH: the next few sentences can be adjusted depending on text included in Ch 3 of the CS paper. Do we need to do the same thing for ISC chum?--> <!--CW: I think it may be better to move this text down this section. I think it would be better to start with the situations when the logistic regression-based LRP is recommended --> In preliminary analyses, we considered CU status based on the Rapid Multidimensional Scanner Tool, but have chosen to focus on the single metric approach for several reasons. First, the Rapid Multidimensional Scanner Tool includes status on smoothed abundance data (running generational geometric mean) relative to the benchmark, and therefore the status in one year depends on the status in the previous year. Autocorrelation violates the assumption of independence of observations required in the logistic regression. Although logistic regressions can be revised to account for autocorrelated residuals, the available degrees of freedom are often insufficient to increase model complexity given the relatively short time-series of CUs assessments and changes in environmental conditions which sometimes precludes including older data. <!--CH: also sometimes skew in data points towards most years with all CUs above lower benchmarks which limits power of LR-->. In addition, the Rapid Multidimensional Scanner Tool includes metrics on short- and long-term trends in spawner abundances which are less directly related to, and may be completely unrelated to aggregate abundances. For CUs that rely on time trends for status assessments, aggregate-abundance based metrics are likely not appropriate (see below). However, future analyses could explore the possibility of including CU statuses derived from the Rapid Multidimensional Scanner Tool that rely primarily on absolute and relative abundance benchmarks (e.g., 1500 fish or Sgen) with alternative logistic regression-model forms that include autocorrelation. <!--CH: could exclude or move the last sentence?-->
+Empirical logistic regression-based LRPs are derived from historical time-series of proportion of CUs above red status, indicated by a single metric metric on spawner abundances or distribution.  <!--CH: the next few sentences can be adjusted depending on text included in Ch 3 of the CS paper. Do we need to do the same thing for ISC chum?--> <!--CW: I think it may be better to move this text down this section. I think it would be better to start with the situations when the logistic regression-based LRP is recommended --> In preliminary analyses, we considered CU status based on the Rapid Multidimensional Scanner Tool, but have chosen to focus on the single metric approach for several reasons. First, the Rapid Multidimensional Scanner Tool includes status on smoothed abundance data (running generational geometric mean) relative to the benchmark, and therefore the status in one year depends on the status in the previous year. Autocorrelation violates the assumption of independence of observations required in the logistic regression. Although logistic regressions can be revised to account for autocorrelated residuals, the available degrees of freedom are often insufficient to increase model complexity given the relatively short time-series of CUs assessments and changes in environmental conditions which sometimes precludes including older data. <!--CH: also sometimes skew in data points towards most years with all CUs above lower benchmarks which limits power of LR-->. In addition, the Rapid Multidimensional Scanner Tool includes metrics on short- and long-term trends in spawner abundances which are less directly related to, and may be completely unrelated to aggregate abundances. For CUs that rely on time trends for status assessments, aggregate abundance-based metrics are likely not appropriate (see below). However, future analyses could explore the possibility of including CU statuses derived from the Rapid Multidimensional Scanner Tool that rely primarily on absolute and relative abundance benchmarks (e.g., 1500 fish or Sgen) with alternative logistic regression-model forms that include autocorrelation. <!--CH: could exclude or move the last sentence?-->
 
 <!--CH Q: should we mention that different methods, e.g., percentile vs SR benchmark can be used within the same SMU? However, we shouldn't mix trend-based metrics with abundance-based metrics of CU status for agg-Abund LRPs
 CW: yes, we could mention it as part of bullet 1, suggestion below.-->
@@ -241,7 +241,7 @@ Projection-based LRPs may be appropriate when:
 
 
 <!--CH: extra text I don't think is needed (but this point can be highlighted in Case Study paper): 
-For example, if there is a high probability that any one CU will be below the lower benchmark in a given year due to asynchronous dynamics, there is also a high probability that aggregate abundances are below the aggregate-abundance based LRP.  In contrast, when correlations in population dynamics and status assessments are relatively high among CUs, aggregate-abundance based LRPs tend to be lower. -->
+For example, if there is a high probability that any one CU will be below the lower benchmark in a given year due to asynchronous dynamics, there is also a high probability that aggregate abundances are below the aggregate abundance-based LRP.  In contrast, when correlations in population dynamics and status assessments are relatively high among CUs, aggregate abundance-based LRPs tend to be lower. -->
  <!--CH comment: Also, I removed wording about agg-abund LRPs being more precautionary (~higher) than proportion-based LRPs when correlations among CUs are low, because I think the level of precaution is the same (both LRPs give more red status when correlations are low). Does that make sense?
  --> 
 
@@ -255,7 +255,7 @@ Projection-based LRPs may be inappropriate when:
 
 - Pairwise correlations in recruitment residuals among CUs are low or negative, such that individual CU statuses tend to be independent of aggregate-abundances (see above). 
 
-- Projection-based LRPs are used to evaluate status under a new management procedure that is not considered in the projection model. Projection-based LRPs depend on the specific management procedure applied in the projections, implemented as a constant exploitation strategy for our case studies. However, sensitivity analyses of projection-based LRPs to various exploitation rates or management procedures can demonstrate aggregate abundances required to maintain CUs above their lower benchmarks under a variety of possible management scenarios, and the sensitivity of management choice to the aggregate-abundance based LRP.
+- Projection-based LRPs are used to evaluate status under a new management procedure that is not considered in the projection model. Projection-based LRPs depend on the specific management procedure applied in the projections, implemented as a constant exploitation strategy for our case studies. However, sensitivity analyses of projection-based LRPs to various exploitation rates or management procedures can demonstrate aggregate abundances required to maintain CUs above their lower benchmarks under a variety of possible management scenarios, and the sensitivity of management choice to the aggregate abundance-based LRP.
 
 - There is only 1 CU in the SMU. In this case, the CU-level status equates to the SMU-level status.
 
@@ -268,18 +268,18 @@ An additional difference between these methods is how they account for uncertain
 
 For logistic regression-based LRPs derived from CU assessments that are independent of spawner-recruitment models (e.g, that use habitat-based benchmarks), it is still be possible to integrate uncertainties from the CU assessments to SMU-level LRPs though bootstrapping methods. For example, where CU benchmark estimates are provided with uncertainties, benchmarks can be sampled from those distributions randomly and used to estimate a distribution of LRPs. In preliminary analyses, this approach was applied to the case study for West Coast Vancouver Island Chinook Salmon to derive uncertainty in logistic regression-based LRPs that accounted for uncertainty in status of component inlets from a watershed-area model. However, because the data did not support the use of logistic regression for that case study, results are not presented, but code to apply this method is available in our repository.
 
-### Apply aggregate-abundance based LRPs (Step 10)
+### Apply aggregate abundance-based LRPs (Step 10)
 
 Any aggregate-abundance methods that meet the above criteria are applied. See the companion working paper, Holt et al. in review, for example applications of these methods.
 
 
-### Compare aggregate-abundance based LRPs (Step 11)
+### Compare aggregate abundance-based LRPs (Step 11)
 
-Principle 6 for the development of LRPs states that alternative paradigms for developing LRPs should be evaluated (Section \@ref(principles). If multiple aggregate-abundance based methods are applied and statuses differ depending on the method chosen, we suggest (re)considering if all assumptions are met. Statuses that converge among methods provide more strength that LRPs represent a level above serious harm.  Although LRPs that converge may be based on assumptions that are coincidentally incorrect, the principle of Occam's razor supports explanations with fewer exceptions. When LRPs diverge, the underlying assumptions causing those divergences should be explored and further reviewed. We suggest comparing aggregate-abundance based LRPs to current generational (geometric) average spawner abundances to derive SMU status in a way that integrates <!--to integrate (?) --> across independent cohorts (and is consistent with WSP assessments). 
+Principle 6 for the development of LRPs states that alternative paradigms for developing LRPs should be evaluated (Section \@ref(principles). If multiple aggregate abundance-based methods are applied and statuses differ depending on the method chosen, we suggest (re)considering if all assumptions are met. Statuses that converge among methods provide more strength that LRPs represent a level above serious harm.  Although LRPs that converge may be based on assumptions that are coincidentally incorrect, the principle of Occam's razor supports explanations with fewer exceptions. When LRPs diverge, the underlying assumptions causing those divergences should be explored and further reviewed. We suggest comparing aggregate abundance-based LRPs to current generational (geometric) average spawner abundances to derive SMU status in a way that integrates <!--to integrate (?) --> across independent cohorts (and is consistent with WSP assessments). 
 
-### Compare status from aggregate-abundance based LRPs to that from Prorportion-based LRPs (Step 12)
+### Compare status from aggregate abundance-based LRPs to that from Prorportion-based LRPs (Step 12)
 
-In this step, we recommend comparing status from aggregate-abundance based LRPs to that from proportion-based LRPs identified in Step 5. While aggregate-abundance based LRPs exploit observed covariation in dynamics among CUs,  observation errors, temporal variation in covariation, and/or infrequent extreme events may result in a break-down in that covariation, and hence statuses from abundance-based LRPs that differ from those based on proportion-base LRPs. We recommend Proportion-based LRPs as the default LRP to implement Fish Stock provisions, with aggregate-abundance based LRPs supplemental where required for harvest management. 
+In this step, we recommend comparing status from aggregate abundance-based LRPs to that from proportion-based LRPs identified in Step 5. While aggregate abundance-based LRPs exploit observed covariation in dynamics among CUs,  observation errors, temporal variation in covariation, and/or infrequent extreme events may result in a break-down in that covariation, and hence statuses from abundance-based LRPs that differ from those based on proportion-base LRPs. We recommend Proportion-based LRPs as the default LRP to implement Fish Stock provisions, with aggregate abundance-based LRPs supplemental where required for harvest management. 
 
 <!-- CW: Can we say how often these comparisons should happen? 
 Is it realistic to suggest that comparisons will be done every year? Or would these comparisons be done every X years?
